Started code modification process to deal with 2 through 4 players. Edited game and round object, and methods from the main activity and rvadapter to reflect 2-4 players. Learned about and implemented fragments and created cardview for 3 and 4 players to properly display on the UI side of things as well.

--- a/EthansScorekeeperApp/app/src/main/res/layout/score_table_recycler_view.xml
+++ b/EthansScorekeeperApp/app/src/main/res/layout/score_table_recycler_view.xml
@@ -6,7 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <LinearLayout
+    <FrameLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/frameLayoutFragmentPlayerNames"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:name="com.example.ExampleFragment" />
+
+    <!--<LinearLayout
         android:id="@+id/playerNames"
         android:layout_width="match_parent"
         android:layout_height="50dp">
@@ -34,7 +41,7 @@
             android:textAlignment="center"
             tools:ignore="RtlCompat" />
 
-    </LinearLayout>
+    </LinearLayout> -->
 
     <LinearLayout
         android:id="@+id/recyclerViewLayout"
