Finished modifying the game and app for 2-4 players. Started working on saving the game using the GameList object and storing it as a file to be read when loading in games.

--- a/EthansScorekeeperApp/app/src/main/res/layout/home_screen.xml
+++ b/EthansScorekeeperApp/app/src/main/res/layout/home_screen.xml
@@ -5,6 +5,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <LinearLayout
+        android:id="@+id/recyclerViewLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="125dp">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewGames"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="vertical" >
+        </androidx.recyclerview.widget.RecyclerView>
+
+    </LinearLayout>
+
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/newGameButton"
