Finished gameLoad method so now when the user loads one of the games from the saved game list, the recycler view and UI properly displays that game's scores and player names.

--- a/EthansScorekeeperApp/app/src/main/res/layout/cardview_saved_games.xml
+++ b/EthansScorekeeperApp/app/src/main/res/layout/cardview_saved_games.xml
@@ -18,7 +18,8 @@
         app:strokeColor="@color/grey"
         app:strokeWidth="2dp"
         android:text="game"
-        android:textColor="@color/black"/>
+        android:textColor="@color/black"
+        android:onClick="onSavedGameClick" />
 
 
 </androidx.cardview.widget.CardView>
