--- a/EthansScorekeeperApp/app/src/main/res/layout/fragment_rv_two_player.xml
+++ b/EthansScorekeeperApp/app/src/main/res/layout/fragment_rv_two_player.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.fragmentRVTwoPlayer">
+    tools:context=".fragments.fragmentNamesTwoPlayer">
 
     <LinearLayout
         android:id="@+id/playerNames"
