Allowed user to delete games from the game list. Also changed calling of the save method so that it is called when the user closes the app the save method is called.

--- a/EthansScorekeeperApp/app/src/main/res/layout/cardview_saved_games.xml
+++ b/EthansScorekeeperApp/app/src/main/res/layout/cardview_saved_games.xml
@@ -27,7 +27,7 @@
             android:onClick="onSavedGameClick" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/deleteGameButton"
+            android:id="@+id/deleteGameButton_id"
             android:layout_width="0dp"
             android:layout_weight="1"
             app:fabCustomSize="30dp"
