--- a/EthansScorekeeperApp/app/src/main/res/layout/cardview_move_two_player.xml
+++ b/EthansScorekeeperApp/app/src/main/res/layout/cardview_move_two_player.xml
@@ -33,7 +33,8 @@
             android:inputType="number"
             android:text="score"
             android:textAlignment="center"
-            tools:ignore="RtlCompat" />
+            tools:ignore="RtlCompat"
+            android:selectAllOnFocus="true"/>
 
         <EditText
             android:layout_width="0dp"
@@ -43,7 +44,8 @@
             android:inputType="number"
             android:text="score"
             android:textAlignment="center"
-            tools:ignore="RtlCompat" />
+            tools:ignore="RtlCompat"
+            android:selectAllOnFocus="true"/>
 
 
     </LinearLayout>
