--- a/EthansScorekeeperApp/app/src/main/res/layout/score_table_recycler_view.xml
+++ b/EthansScorekeeperApp/app/src/main/res/layout/score_table_recycler_view.xml
@@ -35,42 +35,39 @@
         android:layout_above="@+id/frameLayoutFragmentScores"
         android:layout_marginBottom="12dp" >
 
-        <Button
-            android:id="@+id/calculateButton"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="50dp"
-            android:text="Calculate"
-            android:background="@color/red"
-            android:onClick="onCalculateClick" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_weight="0.2"
-            android:layout_height="50dp" />
-
-        <Button
-            android:id="@+id/saveButton"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="50dp"
-            android:text="Save"
-            android:background="@color/red"
-            android:onClick="onSaveClick" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_weight="0.2"
-            android:layout_height="50dp" />
 
         <Button
             android:id="@+id/addRowButton"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="50dp"
+            android:layout_marginLeft="5dp"
             android:text="Add Row"
-            android:background="@color/red"
+            android:backgroundTint="@color/white"
+            app:strokeColor="@color/grey"
+            android:textColor="@color/black"
+            app:strokeWidth="2dp"
             android:onClick="onAddRowClick" />
+
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="50dp" />
+
+
+        <Button
+            android:id="@+id/saveButton"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="50dp"
+            android:layout_marginRight="5dp"
+            android:text="Save"
+            android:onClick="onSaveClick"
+            android:backgroundTint="@color/white"
+            app:strokeColor="@color/grey"
+            android:textColor="@color/black"
+            app:strokeWidth="2dp" />
 
     </LinearLayout>
 
