Added methods to allow the user to click off an edit text and hide the keyboard. Also added a help button which tells the user about the app.

--- a/EthansScorekeeperApp/app/src/main/res/layout/cardview_saved_games.xml
+++ b/EthansScorekeeperApp/app/src/main/res/layout/cardview_saved_games.xml
@@ -34,7 +34,7 @@
             app:srcCompat="@drawable/ic_delete"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/white"
-            app:backgroundTint="@color/white"
+            app:backgroundTint="@color/grey"
             app:borderWidth="2dp"
             android:clickable="true"
             tools:ignore="VectorDrawableCompat"
