--- a/EthansScorekeeperApp/app/src/main/res/layout/score_table_recycler_view.xml
+++ b/EthansScorekeeperApp/app/src/main/res/layout/score_table_recycler_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+    android:id="@+id/rvScoresParent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,7 +12,9 @@
         android:id="@+id/frameLayoutFragmentPlayerNames"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:name="com.example.ExampleFragment" />
+        android:name="com.example.ExampleFragment"
+        android:focusable="true"
+        android:focusableInTouchMode="true"/>
 
     <LinearLayout
         android:id="@+id/recyclerViewLayout"
@@ -32,8 +35,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_above="@+id/frameLayoutFragmentScores"
-        android:layout_marginBottom="12dp" >
+        android:layout_above="@+id/frameLayoutFragmentScores">
 
 
         <Button
