Added features that allows the app to perform in Spanish as well as English.

--- a/EthansScorekeeperApp/app/src/main/res/layout/fragment_rv_four_player.xml
+++ b/EthansScorekeeperApp/app/src/main/res/layout/fragment_rv_four_player.xml
@@ -20,7 +20,8 @@
             android:layout_width="0dp"
             android:layout_weight="2"
             android:layout_height="match_parent"
-            android:text="Player 1"
+            android:text="@string/player_one"
+            android:textSize="12sp"
             android:textAlignment="center"
             tools:ignore="RtlCompat"
             android:selectAllOnFocus="true"/>
@@ -30,7 +31,8 @@
             android:layout_width="0dp"
             android:layout_weight="2"
             android:layout_height="match_parent"
-            android:text="Player 2"
+            android:text="@string/player_two"
+            android:textSize="12sp"
             android:textAlignment="center"
             tools:ignore="RtlCompat"
             android:selectAllOnFocus="true"/>
@@ -40,7 +42,8 @@
             android:layout_width="0dp"
             android:layout_weight="2"
             android:layout_height="match_parent"
-            android:text="Player 3"
+            android:text="@string/player_three"
+            android:textSize="12sp"
             android:textAlignment="center"
             tools:ignore="RtlCompat"
             android:selectAllOnFocus="true"/>
@@ -50,7 +53,8 @@
             android:layout_width="0dp"
             android:layout_weight="2"
             android:layout_height="match_parent"
-            android:text="Player 4"
+            android:text="@string/player_four"
+            android:textSize="12sp"
             android:textAlignment="center"
             tools:ignore="RtlCompat"
             android:selectAllOnFocus="true"/>
