--- a/EthansScorekeeperApp/app/src/main/res/layout/fragment_scores_three_player.xml
+++ b/EthansScorekeeperApp/app/src/main/res/layout/fragment_scores_three_player.xml
@@ -16,7 +16,7 @@
             android:layout_width="0dp"
             android:layout_weight="1.5"
             android:layout_height="match_parent"
-            android:text="Total"
+            android:text="@string/total"
             android:textColor="@color/red"
             android:textStyle="bold"
             android:inputType="text"
@@ -29,9 +29,8 @@
             android:layout_width="0dp"
             android:layout_weight="2"
             android:layout_height="match_parent"
-            android:text="Total 1"
+            android:text="@string/total_one"
             android:textStyle="bold"
-            android:inputType="text"
             android:textAlignment="center"
             android:gravity="center_vertical"
             tools:ignore="RtlCompat" />
@@ -41,9 +40,8 @@
             android:layout_width="0dp"
             android:layout_weight="2"
             android:layout_height="match_parent"
-            android:text="Total 2"
+            android:text="@string/total_two"
             android:textStyle="bold"
-            android:inputType="text"
             android:textAlignment="center"
             android:gravity="center_vertical"
             tools:ignore="RtlCompat" />
@@ -53,9 +51,8 @@
             android:layout_width="0dp"
             android:layout_weight="2"
             android:layout_height="match_parent"
-            android:text="Total 3"
+            android:text="@string/total_three"
             android:textStyle="bold"
-            android:inputType="text"
             android:textAlignment="center"
             android:gravity="center_vertical"
             tools:ignore="RtlCompat" />
