--- a/EthansScorekeeperApp/app/src/main/res/layout/cardview_move_three_player.xml
+++ b/EthansScorekeeperApp/app/src/main/res/layout/cardview_move_three_player.xml
@@ -21,7 +21,7 @@
             android:textColor="@color/red"
             android:textStyle="bold"
             android:inputType="text"
-            android:text="round"
+            android:text="@string/round"
             android:gravity="center_vertical"
             tools:ignore="RtlCompat" />
 
