--- a/EthansScorekeeperApp/app/src/main/res/layout/score_table_recycler_view.xml
+++ b/EthansScorekeeperApp/app/src/main/res/layout/score_table_recycler_view.xml
@@ -41,10 +41,11 @@
         <Button
             android:id="@+id/addRowButton"
             android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:layout_height="50dp"
             android:layout_marginLeft="5dp"
-            android:text="Add Row"
+            android:text="@string/add_row"
+            android:textSize="12sp"
             android:backgroundTint="@color/white"
             app:strokeColor="@color/grey"
             android:textColor="@color/black"
@@ -61,10 +62,12 @@
         <Button
             android:id="@+id/saveButton"
             android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:layout_height="50dp"
             android:layout_marginRight="5dp"
-            android:text="Save"
+            android:text="@string/save"
+            android:textSize="12sp"
+
             android:onClick="onSaveClick"
             android:backgroundTint="@color/white"
             app:strokeColor="@color/grey"
