--- a/EthansScorekeeperApp/app/src/main/res/layout/home_screen.xml
+++ b/EthansScorekeeperApp/app/src/main/res/layout/home_screen.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:layout_marginBottom="125dp">
+        android:layout_marginBottom="25dp">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewGames"
@@ -32,7 +32,7 @@
         android:backgroundTint="@color/white"
         app:backgroundTint="@color/grey"
         app:borderWidth="2dp"
-        android:layout_alignParentBottom="true"
+        android:layout_above="@+id/adView"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="15dp"
         android:layout_marginRight="15dp"
@@ -48,10 +48,21 @@
         android:backgroundTint="@color/white"
         app:backgroundTint="@color/grey"
         app:borderWidth="2dp"
-        android:layout_alignParentBottom="true"
+        android:layout_above="@+id/adView"
         android:layout_alignParentLeft="true"
         android:layout_marginBottom="15dp"
         android:layout_marginLeft="15dp"
         android:onClick="onHelpClick" />
+
+    <com.google.android.gms.ads.AdView
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-1137765042252258/5086028657">
+    </com.google.android.gms.ads.AdView>
 
 </RelativeLayout>
